/*
 * Copyright 2019 Hayo van Loon
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

syntax = "proto3";

package bobsknobshop.common.v1;

import "google/type/money.proto";
import "google/api/annotations.proto";

option java_multiple_files = true;
option java_package = "gl.bobsknobshop.common.v1";
option go_package = "github.com/HayoVanLoon/genproto/bobsknobshop/common/v1;common";


message Comment {

    // Unique name for comment.
    string name = 1;

    // Timestamp comment was recorded.
    int64 created_on = 2;

    // Topic the comment is aimed at
    string topic = 3;

    // The name of the author of the comment.
    string author = 4;

    // The comment body.
    string text = 5;
}


message Order {

    // Unique name for order.
    string name = 1;

    // Timestamp order was recorded.
    int64 created_on = 2;

    // Customer ID.
    string client = 5;

    // Order total
    google.type.Money total = 6;

    // The ordered items
    repeated OrderLine order_lines = 7;

    message OrderLine {
        // Unique name for order.
        string name = 1;

        // Product ID.
        string sku = 2;

        // Number of items ordered.
        int32 quantity = 3;

        // Order line total.
        google.type.Money total = 4;
    }
}
